samples/_failures_safe/1761659714_26f7c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d689e45a.c: In function ‘main’:
./samples/SAFE/__tmp_d689e45a.c:177:5: error: expected expression at end of input
  177 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_d689e45a.c:177:5: error: expected declaration or statement at end of input
